Fix remove extra icon from modal and fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -660,14 +660,19 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
   fill: #4d5ae5;
 }
 
-.form-textarea {
+  .form-textarea {
   width: 100%;
   height: 120px;
-  padding: 8px 16px;
-  border-radius: 4px;
+  font-size: 12px; 
+  line-height: 1.17; 
+  letter-spacing: 0.04em; 
+  color: rgba(46, 47, 66, 0.4); 
   border: 1px solid rgba(46, 47, 66, 0.4);
-  resize: none;
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
   outline: transparent;
+  resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -791,9 +796,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
 
 
 .subscribe-icon {
-  margin-left: 16px;
   fill: #ffffff; 
-
 }
 
 
